repair test failures that resulted from loading the EV_COMPONENT already in EvModule